--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open --mode development",
-    "build": "webpack --mode production",
+    "start": "webpack serve --open --mode development --config webpack.config.cjs",
+    "build": "webpack --mode production --config webpack.config.cjs",
     "lint": "eslint .",
     "test": "jest"
   },
