--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "eslint": "^9.32.0",
     "eslint-webpack-plugin": "^5.0.2",
     "globals": "^16.3.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^30.0.5",
+    "mini-css-extract-plugin": "^2.9.2",
     "regenerator-runtime": "^0.14.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.101.0",
